<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ParleyDroneLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParleyDrone" >

    <Button
        android:id="@+id/createNewCollectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createNewCollection" />

    <Button
        android:id="@+id/openAviableCollectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/openAviableCollection" />

    <Button
        android:id="@+id/loadCollectionsNetworkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loadCollectionsFromNetwork" />

    <TextView
        android:id="@+id/lastOpenedCollectionsTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastOpenedCollections"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="30dp" />

</LinearLayout>